[package]
name = "stone-prover-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Starkware Stone prover and verifier."
build = "build.rs"

[dependencies]
bincode = "2.0.0-rc.3"
cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", rev = "b2f69d230416129a84ad8237ccc13d088992f74b", features=["extensive_hints"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
stark_evm_adapter = "0.1.5"
tempfile = "3.8.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "process", "rt-multi-thread"] }


[dev-dependencies]
rstest = "0.18.2"
